--- a/react-app/package.json
+++ b/react-app/package.json
@@ -33,6 +33,9 @@
     "mini-css-extract-plugin": "^0.2.0",
     "open-browser-webpack-plugin": "^0.0.5",
     "raw-loader": "^0.5.1",
+    "react-redux": "^5.0.7",
+    "redux": "^4.0.0",
+    "redux-thunk": "^2.2.0",
     "sass-loader": "^6.0.7",
     "webpack": "^4.2.0",
     "webpack-cli": "^2.0.13",
