--- a/react-app/package.json
+++ b/react-app/package.json
@@ -12,6 +12,7 @@
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.1",
     "remove": "^0.1.5",
+    "styled-components": "^3.3.3",
     "url-loader": "^1.0.1"
   },
   "scripts": {
