--- a/react-app/package.json
+++ b/react-app/package.json
@@ -8,12 +8,14 @@
     "node-sass": "^4.8.3",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-lazyimg-component": "0.0.2",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.1",
     "remove": "^0.1.5",
     "styled-components": "^3.3.3",
-    "url-loader": "^1.0.1"
+    "url-loader": "^1.0.1",
+    "velocity-animate": "^1.5.2"
   },
   "scripts": {
     "start": "webpack-dev-server --hot --inline --color --hot --config ./webpack/webpack.dev.config.js",
